objects/ArchivedEmailMessage__c.object
<CustomObject>
    <fields>
        <fullName>BccAddress__c</fullName>
        <label>BccAddress</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>ArchivedEmailMessages</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CcAddress__c</fullName>
        <label>CcAddress</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EmailMessage_CreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EmailMessage Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Archived_Email_Messages1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EmailMessage_CreatedDate__c</fullName>
        <label>EmailMessage Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmailMessage_LastModifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EmailMessage Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Archived_Email_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EmailMessage_LastModifiedDate__c</fullName>
        <label>EmailMessage Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmailTemplateId__c</fullName>
        <label>EmailTemplateId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstOpenedDate__c</fullName>
        <label>FirstOpenedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FromAddress__c</fullName>
        <label>FromAddress</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FromName__c</fullName>
        <label>FromName</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HasAttachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasAttachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Headers__c</fullName>
        <label>Headers</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incoming__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incoming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsBounced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsBounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsClientManaged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsClientManaged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsExternallyVisible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsExternallyVisible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsOpened__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsOpened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTracked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsTracked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastOpenedDate__c</fullName>
        <label>LastOpenedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <label>LegacyID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <label>LegacySystem</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessageDate__c</fullName>
        <label>MessageDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MessageIdentifier__c</fullName>
        <label>MessageIdentifier</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PKIDEmailMessage__c</fullName>
        <label>PKIDEmailMessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplyToEmailMessageId__c</fullName>
        <label>ReplyToEmailMessageId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>New</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Read</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Replied</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Sent</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Forwarded</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Draft</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TextBody__c</fullName>
        <label>TextBody</label>
        <length>128000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ThreadIdentifier__c</fullName>
        <label>ThreadIdentifier</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ToAddress__c</fullName>
        <label>ToAddress</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ValidatedFromAddress__c</fullName>
        <label>ValidatedFromAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Archived Email Message</label>
    <nameField>
        <label>ArchivedEmailMessages Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Archived Email Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>